<resources>
    <string name="app_name">Contact Tracing</string>
    <string name="welcome_message">Welcome to the contact tracing app!</string>
    <string name="trace_title">Virus Exposure Alert</string>
    <string name="trace_message">
        You may have been exposed to the virus as someone you have been in contact with in the last
        14 days has recently tested positive. Below you can see when and where you were in contact
        with this person.
    </string>
    <string name="report_message">Click the following button if you have received a positive test to report it</string>

    <!-- Notifications -->
    <string name="service_title">Contact Tracer</string>
    <string name="service_content">Tracking your location for contact tracing purposes.</string>
    <string name="trace_alert_title">Exposure Alert</string>
    <string name="trace_alert_content">You have been in contact with someone in the last 14 days who has recently tested positive. Click on the notification for more information.</string>

    <!-- Permission dialog -->
    <string name="perm_rationale_title">Oops!</string>
    <string name="perm_rational_text">
        It seems you have not given the app permission to your location, this is necessary for us
        to be able to carry out the contact tracing.
    </string>

    <!-- Report dialog -->
    <string name="report_dialog_title">Select the date you received positive result</string>

    <!-- Toast -->
    <string name="too_small">That value is too small, the minimum is %d</string>
    <string name="too_large">That value is too large, the maximum is %d</string>
    <string name="uuid_generated_toast">New UUID generated successfully</string>
    <string name="service_not_running">Tracing service not running</string>
    <string name="service_already_running">Tracing service already running</string>
    <string name="unable_to_obtain_permission">The app cannot function without permission to access your location</string>

    <!-- Buttons -->
    <string name="start_button">Start Tracing</string>
    <string name="stop_button">Stop Tracing</string>
    <string name="report_button">Report Positive Test</string>

    <!-- Menu item -->
    <string name="settings_menu_item">Settings</string>

    <!-- Preference Titles -->
    <string name="tracing_header">Tracing Parameters</string>
    <string name="uuid_header">Unique Id</string>

    <!-- Location Preferences -->
    <string name="tracing_distance_title">Tracing Distance (in meters)</string>
    <string name="sedentary_time_title">Sedentary Time (in minutes)</string>

    <!-- Uuid Preferences -->
    <string name="regenerate_uuid_title">Regenerate Unique Id</string>
    <string name="regenerate_uuid_desc">Regenerate your unique user id</string>
</resources>