<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/tracing_header">

        <EditTextPreference
            app:key="tracing_distance"
            app:defaultValue="2"
            app:title="@string/tracing_distance_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="sedentary"
            app:defaultValue="medium"
            app:entries="@array/sedentary_entries"
            app:entryValues="@array/sedentary_values"
            app:title="@string/sedentary_time_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/uuid_header">
        <Preference
            app:key="regenerate_uuid"
            app:title="@string/regenerate_uuid_title"
            app:summary="@string/regenerate_uuid_desc" />
    </PreferenceCategory>

</PreferenceScreen>